--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
 
 @import url('../src/styles/header.css');
 @import url('../src/styles/footer.css');
+@import url('../src/styles/model.css');
 
-body {
-  font-family: Avenir Next;
+.app {
+  max-width: 1600px;
+}
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
   margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-family: Avenir Next;
 }
