--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,6 +2,8 @@
 .footer {
     height: 200px;
     padding: 20px 40px;
+    margin-left: -44px;
+    margin-right: -44px;
     background-color: #0a0a0a;
     color: white;
     display: flex;
