define-sections. add introduction

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ html, body, #root {
   overflow: hidden;
   font-family: Avenir Next;
 }
+
+.scroll-page-container:not(:nth-of-type(1)) {
+  margin: 20px 0;
+}
