--- a/src/styles/introduction.css
+++ b/src/styles/introduction.css
@@ -1,5 +1,25 @@
 
 .introduction {
-    /* background-color: red; */
     height: 100%;
+    color: black;
+}
+
+.introduction__body {
+    padding: 20px 40px;
+}
+
+.introduction__car-title {
+    text-transform: uppercase;
+    font-size: 24px;
+}
+
+.introduction__car-moto {
+    text-transform: uppercase;
+    font-size: 32px;
+}
+
+.introdcution__info-title {
+    margin-top: 40px;
+    text-transform: uppercase;
+    font-size: 24px;
 }
