--- a/src/styles/contact-us.css
+++ b/src/styles/contact-us.css
@@ -4,4 +4,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 20px 40px;
+    color: black;
+}
+
+
+.contact-us__title {
+    text-transform: uppercase;
+    font-size: 24px;
 }
