--- a/src/styles/contact-us.css
+++ b/src/styles/contact-us.css
@@ -1,4 +1,3 @@
-
 .contact-us {
     height: 100%;
     display: flex;
@@ -8,8 +7,14 @@
     color: black;
 }
 
-
 .contact-us__title {
     text-transform: uppercase;
     font-size: 24px;
+}
+
+.contact-us__input input {
+    padding-left: 8px;
+    height: 40px;
+    border: 1px solid #eaecf0;
+    border-radius: 6px;
 }
