--- a/src/styles/contact-us.css
+++ b/src/styles/contact-us.css
@@ -12,9 +12,30 @@
     font-size: 24px;
 }
 
-.contact-us__input input {
-    padding-left: 8px;
-    height: 40px;
-    border: 1px solid #eaecf0;
-    border-radius: 6px;
+.contact-us__body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-us__form {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-us__submit {
+    margin-top: 40px;
+    max-width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 8px;
+    background-color: #27292c !important;
+    color: white;
 }
